--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "cp-ansible"]
 	path = cp-ansible
 	url = git@github.com:cricket007/cp-ansible.git
-	branch = 5.1.x
+	branch = 5.1.x-vagrant
